Add autoloader configuration to composer.json

--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,9 @@
             "email": "email@algore.website"
         }
     ],
+
+    "autoload": {
+      "psr-4": { "FauxAlGore\\BehatSay": "src/" }
+    },
     "require": {}
 }
