--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,11 @@
     "autoload": {
       "psr-4": { "FauxAlGore\\BehatSay\\": "src/" }
     },
-    "require": {}
+    "require": {
+      "behat/behat": "^3.1"
+  },
+  "require-dev": {
+    "behat/mink-extension": "^2.2",
+    "behat/mink-goutte-driver": "^1.2"
+  }
 }
